# Copse2D

./: .gitignore  LICENSE  meson.build  readme.md
example/: example.c  meson.build
example/shaders/: efrag.glsl  evert.glsl
src/: meson.build
src/gmath/: coordinates.c  coordinates.h  geometry.c  geometry.h  matrix.c  matrix.h  meson.build  timing.c  timing.h  vector.c  vector.h
src/input/: input.c  input.h  keymap.h  meson.build
src/renderer/: camera.c  camera.h  color.h  dshaders.h  meson.build  render_batch.c  render_batch.h  render_context.c  render_context.h  render_objects.c  render_objects.h  renderer.c  renderer.h  robject.h  shaders.c  shaders.h  texture.c  texture.h  vertex.h
src/window/: meson.build  window.c  window.h
